standardize capitalization of Helium blockchain

--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -73,7 +73,7 @@ depending on how quickly it is registered in the SAS.
 - [Google Play](https://play.google.com/store/apps/details?id=com.helium.wallet.app&gl=US)
 
 A 5G Hotspot with an attached and properly registered Small Cell Radio will start earning MOBILE
-automatically once the 5G rewards are activated on the Helium Blockchain.
+automatically once the 5G rewards are activated on the Helium blockchain.
 
 :::tip
 
@@ -85,13 +85,13 @@ Be sure to update the Helium Wallet app to the latest version. More information 
 
 ## How 5G Hotspots Earn Helium MOBILE Tokens
 
-The Helium Blockchain rewards 5G Hotspots for providing 5G wireless coverage and verifying the
+The Helium blockchain rewards 5G Hotspots for providing 5G wireless coverage and verifying the
 Helium Network. 5G Hotspots are rewarded in the Helium MOBILE Token.
 
 :::info
 
 During the Genesis Period, 5G Hotspots will begin to earn MOBILE by reporting their status via a
-“heartbeat”, an automatic process of reporting to the Helium Blockchain that the Small Cell Radio is
+“heartbeat”, an automatic process of reporting to the Helium blockchain that the Small Cell Radio is
 online and registered with the SAS.
 
 Genesis is the period during which Hotspot owners will be rewarded for providing 5G coverage with
@@ -99,7 +99,7 @@ pre-mined MOBILE tokens. MOBILE tokens will be redeemable for HNT after the Gene
 
 :::
 
-Once a 5G Hotspot is completely deployed and fully synced with the Helium Blockchain, you as the
+Once a 5G Hotspot is completely deployed and fully synced with the Helium blockchain, you as the
 owner are not required to do anything else to earn MOBILE. Your 5G Hotspot will perform all of its
 activities on its own and will be rewarded for maintaining a valid connection to the SAS.
 
@@ -111,7 +111,7 @@ and will continue on a 2-year cycle afterward. This creates a "stub period" as d
 [HIP 53: Mobile subDAO](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md) which will begin
 when normal emissions of MOBILE tokens begin (and MOBILE can be redeemed by HNT in the subDAO's
 treasury). The date for this is currently TBD and dependent on core developers implementing the HNT
-token treasury and redemption transactions on the Helium Blockchain. This is defined as Phase 2 of
+token treasury and redemption transactions on the Helium blockchain. This is defined as Phase 2 of
 [HIP 51: Helium DAO](https://github.com/helium/HIP/blob/main/0051-helium-dao.md) for all new
 subDAOs.
 
