--- a/docs/blockchain/oracles/oracles.mdx
+++ b/docs/blockchain/oracles/oracles.mdx
@@ -106,7 +106,7 @@ this:
 
 ```text
 helium-wallet-oracle-report
-Construct an oracle price report and optionally commit it to the Helium Blockchain
+Construct an oracle price report and optionally commit it to the Helium blockchain
 
 USAGE:
     helium-wallet oracle report [FLAGS] --block <block> --price <price>
