--- a/docs/blockchain/packet-purchasing/packet-purchasing.mdx
+++ b/docs/blockchain/packet-purchasing/packet-purchasing.mdx
@@ -14,14 +14,14 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 A trustless and decentralized way to allow coverage providers and coverage users to exchange value
 is core to the Helium Network.
 
-Packet purchasing is implemented on the Helium Blockchain with two specific primitives:
+Packet purchasing is implemented on the Helium blockchain with two specific primitives:
 
 - Organizationally Unique Identifiers
 - State Channels
 
 ## Organizationally Unique Identifier
 
-Organizationally Unique Identifiers (OUIs) are registered identities on the Helium Blockchain. To
+Organizationally Unique Identifiers (OUIs) are registered identities on the Helium blockchain. To
 send and receive packets to an end-device, a network user needs to be serviced an OUI. This can be
 their own OUI or one operated by a third party, such as [Console](/use-the-network/console) operated
 by Helium, Inc.
@@ -35,7 +35,7 @@ may open and close state channels on behalf of an OUI.
 For example,
 [this account](https://explorer.helium.com/accounts/13tyMLKRFYURNBQqLSqNJg9k41maP1A7Bh8QYxR13oWv7EnFooc)
 [purchased the first OUI](https://explorer.helium.com/txns/6ACW9A5Hj3KDnOJELWAvAVG3yM71OpNAYpdAPM3ti1A)
-on the Helium Blockchain. The address `112qB3YaH5bZkCnKA5uRH7tBtGNv2Y5B4smv1jsmvGUzgKT71QpE`
+on the Helium blockchain. The address `112qB3YaH5bZkCnKA5uRH7tBtGNv2Y5B4smv1jsmvGUzgKT71QpE`
 operates the OUI on behalf of the owner. You can monitor its activity
 [here](https://explorer.helium.com/accounts/14oSuAgRmAFPFPZRY1MUwir5AJSLGkaXHzuSZJ92BuYCfLMN1Et).
 
