--- a/docs/mine-hnt/data-only-guides/balena-data-only-hotspot.mdx
+++ b/docs/mine-hnt/data-only-guides/balena-data-only-hotspot.mdx
@@ -107,7 +107,7 @@ You can find as well the instructions to do it
 
 ## Check your Data Only Hotspot
 
-Now that your Data Only Hostpot has been added into the Helium Blockchain you should be able to see
+Now that your Data Only Hostpot has been added into the Helium blockchain you should be able to see
 it on your Helium wallet.
 
 Go to the [Helium Explorer](https://explorer.helium.com/) and introduce your URL
