--- a/docs/mine-hnt/full-hotspots/become-a-maker/basic-miner-operation.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/basic-miner-operation.mdx
@@ -15,7 +15,7 @@ three pieces:
 
 - Packet Forwarder: this is a utility that interacts with the radio front-end and sends and receives
   raw radio packets with the Helium Miner
-- Miner: the Helium Blockchain comes into the picture here; the Miner is responsible for routing
+- Miner: the Helium blockchain comes into the picture here; the Miner is responsible for routing
   packets to the appropriate Router and entering into micro-transactions brokered via libp2p
 - Router: a Helium compatible LoRaWAN Network Server, basically; this component is interested in
   receiving the packets relating to its devices and handles downlink messages when appropriate
