--- a/docs/mine-hnt/maker-apps.mdx
+++ b/docs/mine-hnt/maker-apps.mdx
@@ -30,7 +30,7 @@ starter app is also open-sourced for forking and further customization.
 ### React Native SDK
 
 The Helium React Native SDK is a collection of modules that can be used by a React Native
-application to interact with Hotspots and the Helium Blockchain. It has first class support for
+application to interact with Hotspots and the Helium blockchain. It has first class support for
 Typescript.
 
 [Read the full documentation](https://helium.github.io/react-native-helium/index.html)
