--- a/docs/mine-hnt/validators/penalties.mdx
+++ b/docs/mine-hnt/validators/penalties.mdx
@@ -9,7 +9,7 @@ slug: /mine-hnt/validators/penalties
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-Validators are a new entity on the Helium Blockchain that will perform the work of the consensus
+Validators are a new entity on the Helium blockchain that will perform the work of the consensus
 group including verifying transactions and adding new blocks to the blockchain. As Validators will
 play an important role in the expansion, stability and success of the Helium network moving forward,
 it's critical that community run Validators meet the performance requirements of their role.
