--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -19,7 +19,7 @@ HNT staking has been enabled for Validators on Mainnet!
 
 :::
 
-Validators are a new entity on the Helium Blockchain that perform the work of the consensus group
+Validators are a new entity on the Helium blockchain that perform the work of the consensus group
 including verifying transactions and adding new blocks to the blockchain.
 
 ## Mainnet
