--- a/docs/open-source/open-source.mdx
+++ b/docs/open-source/open-source.mdx
@@ -16,7 +16,7 @@ community to develop and contribute to all parts of the Network. Below is a subs
 plays an integral role in the Helium Network. The full list can be found on the official
 [Helium GitHub Organization](https://github.com/helium).
 
-### Helium Blockchain
+### Helium blockchain
 
 These are the core libraries and repos that make up the Helium blockchain. Most things here are
 written in Erlang.
@@ -58,7 +58,7 @@ that makes it possible.
   the Helium-enabled gateways.
 
 - [Helium Console](https://github.com/helium/console) - A web browser front-end for users to manage
-  organizations and devices and a Helium Blockchain-compatible LoRaWAN Network Server (LNS).
+  organizations and devices and a Helium blockchain-compatible LoRaWAN Network Server (LNS).
 
 - [Console Decoders](https://github.com/helium/console-decoders) - A collection of LoRaWAN sensor
   decoders used in Helium Console.
@@ -68,7 +68,7 @@ that makes it possible.
 - [Helium Mobile Wallet](https://github.com/helium/hotspot-app) - Helium hotspot app for iOS and
   Android.
 
-- [Helium Blockchain Explorer](https://github.com/helium/explorer) - Code that powers the greatest
+- [Helium blockchain Explorer](https://github.com/helium/explorer) - Code that powers the greatest
   block explorer in the crypto world.
 
 - [Helium Docs](https://github.com/helium/docs) - Docusaurus-based docs for all things Helium.
