--- a/docs/use-the-network/console/data-credits.mdx
+++ b/docs/use-the-network/console/data-credits.mdx
@@ -6,7 +6,7 @@ slug: /use-the-network/console/data-credits
 
 # Data Credits
 
-Data Credits (DCs) are central to the Helium Blockchain and Network. Read about how they fit into
+Data Credits (DCs) are central to the Helium blockchain and Network. Read about how they fit into
 our Tokenomics [here](/blockchain/helium-token#data-credits-and-burn-and-mint-economics).
 
 For a video tutorial of how to purchase Data Credits on Console, check out our Tips & Tricks video
