--- a/docs/use-the-network/run-a-network-server/router-benchmarking.mdx
+++ b/docs/use-the-network/run-a-network-server/router-benchmarking.mdx
@@ -151,7 +151,7 @@ For router under significant load, the most critical graphs to watch:
   - A "state channel" facilitates off-block transactions which get persisted to the Blockchain as a
     single transaction
   - The term "state channel" is the generic term for a Layer-2 Ledger (like the "Lightning Network")
-    and critical to router's use of the Helium Blockchain
+    and critical to router's use of the Helium blockchain
   - An "actor" is a co-routine in Erlang (or "Green Threads", or similar in purpose to "async/await"
     with differing mechanisms)
 - **Offer -> Packet -> Downlink** travel times:
