--- a/docs/use-the-network/run-a-network-server/run-console.mdx
+++ b/docs/use-the-network/run-a-network-server/run-console.mdx
@@ -9,7 +9,7 @@ slug: /use-the-network/run-a-network-server/run-console
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 [Console](https://github.com/helium/console) is a project developed by Helium. It provides a web
-browser front-end for users to manage organizations and devices and a Helium Blockchain-compatible
+browser front-end for users to manage organizations and devices and a Helium blockchain-compatible
 LoRaWAN Network Server (LNS) called [Router](https://github.com/helium/routerv3).
 
 We are working on integrations with third-party LNS's such as Chirpstack, but at this time, this is
@@ -126,7 +126,8 @@ selecting your app.
 
 #### Customize Console Branding
 
-Console Providers can customize their instance of Console UI including the ability to swap out images/logos, email content, and change footer links. 
+Console Providers can customize their instance of Console UI including the ability to swap out
+images/logos, email content, and change footer links.
 
 To customize your open source Console:
 
@@ -140,7 +141,8 @@ Customize `config/app-config.json` as needed.
 
 :::important
 
-If you choose to customize your version of Console you need to build from source or your customizations will be overwritten. 
+If you choose to customize your version of Console you need to build from source or your
+customizations will be overwritten.
 
 :::
 
