--- a/docs/use-the-network/setup-a-packet-forwarder.mdx
+++ b/docs/use-the-network/setup-a-packet-forwarder.mdx
@@ -26,7 +26,7 @@ To be a Helium Miner, there are three principle components to know about
 
 - **Packet Forwarder**: this is a utility that interacts with the radio front-end and sends and
   receives raw radio packets with the Helium Miner
-- **Light Hotspot Client**: the Helium Blockchain comes into the picture here; light hotspot client
+- **Light Hotspot Client**: the Helium blockchain comes into the picture here; light hotspot client
   is responsible for routing packets to the appropriate Router (see our Routing article) entering
   into microtransactions brokered via gRPC
 - **Router**: a Helium compatible LoRaWAN Network Server, basically; this component is interested in
