--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -18,7 +18,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 			<h2 className="subtitle">Build amazing connected solutions on the world’s largest decentralized wireless networks.</h2>
     	</div>
     	<div class="col col--6">
-    		<a className="quicklink" href="/blockchain">Learn about the Helium Blockchain <img className="quicklinkarrow" src={useBaseUrl("img/quicklinkarrow.svg")} /></a>
+    		<a className="quicklink" href="/blockchain">Learn about the Helium blockchain <img className="quicklinkarrow" src={useBaseUrl("img/quicklinkarrow.svg")} /></a>
           <a className="quicklink quicklinkblue" href="/mine-hnt">Learn about mining Tokens <img className="quicklinkarrow" src={useBaseUrl("img/quicklinkarrow.svg")} /></a>
           <a className="quicklink quicklinkgreen" href="/use-the-network">Build Devices to use the Network <img className="quicklinkarrow" src={useBaseUrl("img/quicklinkarrow.svg")} /></a>
     			<a className="quicklink quicklinkred" href="/community-governance">Submit a Helium Improvement Proposal (HIP) <img className="quicklinkarrow" src={useBaseUrl("img/quicklinkarrow.svg")} /></a>
@@ -69,7 +69,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         Blockchain.
       </p>
       <p>
-        The Helium Blockchain is a new, open source, public blockchain created entirely to
+        The Helium blockchain is a new, open source, public blockchain created entirely to
         incentivize the creation of physical, decentralized wireless networks. Today, the Helium
         Blockchain, and its{' '}
         <a href="https://explorer.helium.com/hotspots">hundreds of thousands of Hotspots</a>,
@@ -95,9 +95,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
   <div class="row">
     <div class="col col--6" style={{ marginBottom: 100 }}>
       <img className="homeicon" src={useBaseUrl('img/home/blockchainicon.png')} />
-      <h3>Helium Blockchain</h3>
+      <h3>Helium blockchain</h3>
       <p className="podtext">
-        The Helium Blockchain is a new blockchain built from the ground up to incentivize the
+        The Helium blockchain is a new blockchain built from the ground up to incentivize the
         creation of decentralized, public wireless networks.
       </p>
       <a href="/blockchain">
@@ -224,7 +224,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
           <a href="https://explorer.helium.com">
             <h4>Explorer</h4>
           </a>
-          <p>Helium Blockchain Block Explorer</p>
+          <p>Helium blockchain Block Explorer</p>
         </div>
       </div>
       <div className="tech--item">
