--- a/docs/mine-hnt/full-hotspots/become-a-maker/burn-hnt-to-maker-wallet.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/burn-hnt-to-maker-wallet.mdx
@@ -33,7 +33,7 @@ used for the transactions with your wallet address as the payer.
 
 ## Hotspot Data Credit Fees
 
-In order for any Hotspot to join the Helium Blockchain, its maker address must have sufficient Data
+In order for any Hotspot to join the Helium blockchain, its maker address must have sufficient Data
 Credits. A full list of
 [Helium blockchain data credit fees can be found here](/blockchain/transaction-fees). Hotspot Makers
 need to account for at least `5,135,000` total Data Credits per Hotspot. Specifically, for each
@@ -74,7 +74,7 @@ are non-transferable. Please double-check any wallet address before executing an
 :::
 
 The actual mechanism for burning HNT to DCs is via an on-chain burn transaction
-[using the Helium Blockchain Wallet CLI](https://github.com/helium/helium-wallet-rs). Follow the
+[using the Helium blockchain Wallet CLI](https://github.com/helium/helium-wallet-rs). Follow the
 instructions to download and install the CLI Wallet on your local machine. Once installed, you'll
 use the `burn` command to supply data credits to your specified maker wallet.
 
