updates to “Blockchain” sidebar menu

--- a/docs/blockchain/oracles/oracles.mdx
+++ b/docs/blockchain/oracles/oracles.mdx
@@ -11,7 +11,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 # HNT Price Oracles
 
-HNT converts to Data Credits at a rate pegged to `$.00001` , and so the blockchain requires a
+HNT converts to Data Credits at a rate pegged to `$.00001`, and so the blockchain requires a
 canonical HNT/$USD price for this conversion. Beginning in June 2020, the Helium blockchain
 [started using a system](https://engineering.helium.com/2020/05/29/HNT-Price-Oracles.html) of
 decentralized price oracles to supply the $USD to HNT price used for on-chain for burn transactions.
@@ -78,7 +78,7 @@ The current set of public keys for the eleven HNT Price Oracles are (in no parti
 ```
 
 You can
-[list activity for a specific Oracle](https://docs.helium.com/api/blockchain/oracle-prices/#list-activity-for-a-specific-oracle)
+[list activity for a specific Oracle](/api/blockchain/oracle-prices/#list-activity-for-a-specific-oracle)
 at:
 
 ```
