replace $HNT with HNT

--- a/docs/blockchain/blockchain-primitives.mdx
+++ b/docs/blockchain/blockchain-primitives.mdx
@@ -37,8 +37,8 @@ the consensus group. The target time for an epoch is currently `30 blocks`, as d
 `election_interval` chain variable. Approximately every 30 blocks mined marks the passing of an
 epoch, after which a new group of Validators is elected to form the next consensus group. Mining
 rewards are distributed per epoch (as opposed to per block in most blockchain-based systems). At the
-conclusion of each epoch, the consensus group will distribute all the $HNT produced in that block
-via the `rewards` transaction.
+conclusion of each epoch, the consensus group will distribute all the HNT produced in that block via
+the `rewards` transaction.
 
 ## Transactions
 
