--- a/docs/blockchain/mining.mdx
+++ b/docs/blockchain/mining.mdx
@@ -110,7 +110,7 @@ is currently scheduled for **August 1, 2022.**
 As noted above,
 [HIP10 was activated on August 24th, 2020](https://github.com/helium/HIP/blob/master/0010-usage-based-data-transfer-rewards.md).
 HIP10 was introduced by Helium Community Member `hashc0de` and was adopted by the Helium Community.
-It ensures that $HNT is rewarded at a rate of 1:1 to the amount of Data Credits (DCs) routed by any
+It ensures that HNT is rewarded at a rate of 1:1 to the amount of Data Credits (DCs) routed by any
 given Hotspot per epoch. In doing so, the Network Data Transfer reward is proportional to the DC
 spent that epoch. This proportional relationship between Network Data Transfer reward type and DC is
 capped at 35% (607.6389 HNT). Therefore, if the DC burned doesn't equal the value of `607.6389` HNT,
