--- a/docs/wallets/app-wallet/transaction-failures.mdx
+++ b/docs/wallets/app-wallet/transaction-failures.mdx
@@ -10,8 +10,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 # Types of Transaction Failures
 
 The Helium app automatically notifies users whenever a transaction fails. Transactions can fail for
-a number of reasons - the most common is typically insufficient funds (not enough $HNT in the
-wallet) or a nonce issue.
+a number of reasons - the most common is typically insufficient funds (not enough HNT in the wallet)
+or a nonce issue.
 
 :::note
 
@@ -35,9 +35,9 @@ to determine the appropriate amount of HNT to burn to generate these DCs.
 
 How much HNT to burn depends on the
 [Oracle price](https://docs.helium.com/blockchain/oracles/#hnt-price-oracles). The Oracle price is
-the median $HNT price from a list of individual oracles and used to weather large swings in price.
-In special cases, the price of $HNT may shift enough in a short time period such that the amount of
-HNT burned to generate DCs _is not enough_.
+the median HNT price from a list of individual oracles and used to weather large swings in price. In
+special cases, the price of HNT may shift enough in a short time period such that the amount of HNT
+burned to generate DCs _is not enough_.
 
 :::info
 
@@ -72,10 +72,10 @@ instructions and best practices.
 
 Due to the decentralized nature of the Helium network, it’s important that owners and new owners of
 Hotspots know what they’re getting is a functional unit that is able to sync the blockchain and
-participate in PoC (the way Hotspots mine $HNT). Before transferring a Hotspot, the blockchain
-checks to see if it has had recent activity in the last 1200 blocks (approximately 20 hours).
-Activity counts as creating a challenge, witnessing a challenge, or sending a beacon. It also checks
-that it’s fully synced to the blockchain.
+participate in PoC (the way Hotspots mine HNT). Before transferring a Hotspot, the blockchain checks
+to see if it has had recent activity in the last 1200 blocks (approximately 20 hours). Activity
+counts as creating a challenge, witnessing a challenge, or sending a beacon. It also checks that
+it’s fully synced to the blockchain.
 
 If you see this notification, it means the the Hotspot you’re about to transfer has not shown “proof
 of life” recently.
