fix broken link
it was missing a backlash in the front

--- a/docs/lorawan-on-helium/lorawan-roaming/lorawan-roaming-on-helium.mdx
+++ b/docs/lorawan-on-helium/lorawan-roaming/lorawan-roaming-on-helium.mdx
@@ -18,7 +18,7 @@ major LNSes are roaming with the Helium Network, which means the public coverage
 building is now being used by LoRa devices onboarded to other networks, and Hotspot operators get
 compensated in $HNT for routing these packets.
 
-For more information about the roaming services offering go [here](use-the-network/roaming).
+For more information about the roaming services offering go [here](/use-the-network/roaming).
 
 ## Helium Roaming Architecture
 
