--- a/docs/use-the-network/roaming/roaming.mdx
+++ b/docs/use-the-network/roaming/roaming.mdx
@@ -136,7 +136,7 @@ receive alerts.
 To set up email alerts: click **Alerts**, choose alert and user role to receive alerts.
 
 ## Sample JSON
-Here are the sample JSON payloads that roaming partners can expect to receive on their roaming endpoint
+Here are some sample JSON payloads that roaming partners can expect to receive on their roaming endpoint.
 
 ### Sample Uplink
 ```json
