--- a/docs/troubleshooting/replace-sd-card.mdx
+++ b/docs/troubleshooting/replace-sd-card.mdx
@@ -31,10 +31,10 @@ brand new one:
    are now separated, and can have different date releases Replace the `date` part of the following
    URL with the latest GA tagged >>FIRMWARE<< release in the Community Discord's
    [#announcements](discord://discord.com/channels/404106811252408320/730418759298318346) channel..
-   i.e. new firmware date of `2022.04.14.0` and
+   i.e. new firmware date of `2022.07.15.0` and
    `https://helium-nextgate.s3-us-west-2.amazonaws.com/artifacts/<date>-sdcard.img.gz` becomes
-   `https://helium-nextgate.s3-us-west-2.amazonaws.com/artifacts/2022.04.14.0-sdcard.img.gz`and
-   enter that url in your browser
+   `https://helium-nextgate.s3-us-west-2.amazonaws.com/artifacts/2022.07.15.0-sdcard.img.gz` and
+   enter that URL in your browser.
 6. Unzip the .gz file.
 7. Use Etcher to Flash the newly formatted microSD card with the file.
 8. Place the newly flashed card back into the card reader slot.
